# slayout

./: .gitignore  CMakeLists.txt  README.md  USAGE.md  run_all_examples.sh
examples/booleans_conditions/: booleans_and_conditions_sample.shader  booleans_and_conditions_sample.slayout
examples/booleans_conditions/output/: macros.json  shader.glsl
examples/defaults/: defaults_sample.shader  defaults_sample.slayout
examples/defaults/output/: macros.json  shader.hlsl
examples/generate_all/: generate_all_sample.shader  generate_all_sample.slayout
examples/generate_all/output/: macros.json  shader.glsl  shader.hlsl  shader.msl  shader.spirv
examples/generate_glsl_hlsl/: generate_glsl_hlsl_sample.shader  generate_glsl_hlsl_sample.slayout
examples/generate_glsl_hlsl/output/: macros.json  shader.glsl  shader.hlsl
examples/lazy/: lazy_macro_sample.shader  lazy_macro_sample.slayout
examples/lazy/output/: macros.json  shader.glsl
examples/multiple_macros/: multiple_macros_sample.shader  multiple_macros_sample.slayout
examples/multiple_macros/output/: macros.json  shader.glsl
examples/read_file/: fallback_block.glsl  light_block.glsl  read_from_file_sample.shader  read_from_file_sample.slayout
examples/read_file/output/: macros.json  (+2 more)
examples/string_concat/: string_concat_sample.shader  string_concat_sample.slayout
include/: interpreter.h  parser.h  shader_processor.h  tokenizer.h
shaders/: input.shader  layout.slayout  shader.glsl  shader.hlsl  shader.msl  shader.spirv
src/: interpreter.cpp  main.cpp  parser.cpp  shader_processor.cpp  tokenizer.cpp
(+2 files in other folders)
